add PropertiesServlet, TODO: use official jspm version
git-svn-id: https://svn.exedio.com/cope/trunk/cops@14756 e7d4fc99-c606-0410-b9bf-843393a9eab7

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<ul>
 			<li><a href="http://localhost:8080/cops/">cops</a></li>
 			<li><a href="http://localhost:8080/cops/coloredTable">colored table</a></li>
+			<li><a href="http://localhost:8080/cops/properties">properties</a></li>
 			<li><a href="api/index.html">API Documentation</a> (run <tt>ant api</tt> to build)</li>
 		</ul>
 	</body>
