move links to index.html
git-svn-id: https://svn.exedio.com/cope/cops/trunk@16441 e7d4fc99-c606-0410-b9bf-843393a9eab7

--- a/index.html
+++ b/index.html
@@ -8,8 +8,16 @@
 		<h1>Cops</h1>
 		<ul>
 			<li><a href="http://localhost:8080/cops/">cops</a></li>
+			<li><a href="http://localhost:8080/cops/copsResourceStatus.html">Resource Status</a></li>
 			<li><a href="http://localhost:8080/cops/coloredTable">colored table</a></li>
 			<li><a href="http://localhost:8080/cops/properties">properties</a></li>
+			<li><a href="http://localhost:8080/cops/files/">FileServlet</a></li>
+			<li><a href="http://localhost:8080/cops/copsRequestLimiterStatus.html">Request Limiter</a></li>
+			<li>
+				tomcat:
+				<a href="http://localhost:8080/manager/html">manager</a>,
+				<a href="http://localhost:8080/host-manager/html">host-manager</a>
+			</li>
 			<li><a href="api/index.html">API Documentation</a> (run <tt>ant api</tt> to build)</li>
 		</ul>
 	</body>
