micrometer support for PropertiesServlet

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 			<li><a href="http://localhost:8080/cops/properties">properties</a></li>
 			<li><a href="http://localhost:8080/cops/files/">FileServlet</a></li>
 			<li><a href="http://localhost:8080/cops/copsRequestLimiterStatus.html">Request Limiter</a></li>
+			<li><a href="http://localhost:8080/cops/prometheus/">Prometheus Exporter</a></li>
 			<li>
 				tomcat:
 				<a href="http://localhost:8080/manager/html">manager</a>,
